vendor/structopt-0.3.21/tests/ui/option_required.stderr
error: required is meaningless for Option
  --> $DIR/option_required.rs:14:24
   |
14 |     #[structopt(short, required = true)]
   |                        ^^^^^^^^
